--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -20,3 +20,10 @@
     margin-left: 2em;
     text-indent: -2em;
 }
+
+/* Fix Pandoc MathJax/HTML math rendering */
+span.math.inline {
+    display: inline !important;
+    float: none !important;
+    margin: 0 !important;
+}
